# finagentbench-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/due_diligence/: suite.json
benchmarks/lumenfin_regression/: suite.json
docs/: adapter_guide.md  agent_integration_guide.md  architecture.md  due_diligence_integration.md  finrun_schema.md  human_labeling_guide.md  live_semantic_judge_validation.md  lumenfin_case_selection.md  lumenfin_regression_case.md  reference_runtime.md  regression_log.md  sample_report.md
finagentbench/: __init__.py  benchmark.py  case_binding.py  cli.py  profiles.py  provenance.py  report.py  runner.py  schema.py  suggest.py
fixtures/: agent_state_sample.json  case_bigtech_fcf.json  case_compare_rd.json  case_due_diligence.json  case_due_diligence_semantic_audit.json  case_lumenfin_diligence.json  case_lumenfin_generic.json  case_numeric_only.json  due_diligence_state_sample.json  fail_due_diligence_finrun.json  fail_finrun.json  lumenfin_regression_bad_finrun.json  lumenfin_state_sample.json  pass_bigtech_finrun.json  pass_due_diligence_finrun.json  pass_finrun.json
tests/: __init__.py  helpers.py  test_adapters.py  test_benchmark_suite.py  test_cross_project_gates.py  test_demo_metrics.py  test_due_diligence.py  test_evidence_consistency.py  test_fail_closed_and_provenance.py  test_generic_case.py  test_lumenfin_integration.py  test_profiles.py  test_realistic_fixture.py  test_reference_runtime.py  test_schema_and_registry.py  test_scoring.py  test_semantic_audit.py  test_suggest.py
(+46 files in other folders)
