[project]
name = "finagentbench"
version = "0.1.0"
description = "Replay-first reliability benchmark for financial AI agent runs."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
finagentbench = "finagentbench.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finagentbench*"]
